--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       padding: 20px;
     }
     .container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 20px;
-      max-width: 1000px;
+      max-width: 600px;
       margin: auto;
     }
     textarea {
@@ -35,6 +32,10 @@
       padding: 20px;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    .hidden {
+      display: none;
     }
     .prompt {
       font-size: 24px;
@@ -68,18 +69,18 @@
 <h1>Quizlet Learn (Clone with Save)</h1>
 
 <div class="container">
-  <div class="card">
+  <!-- Paste Mode -->
+  <div class="card" id="pasteCard">
     <h2>Paste Quizlet Set</h2>
     <p>Format: <code>term[TAB]answer1;answer2</code></p>
     <textarea id="dataInput" placeholder="adult	大人;おとな"></textarea>
     <button onclick="startLearn(false)">Start Learn Mode</button>
   </div>
 
-  <div class="card">
+  <!-- Learn Mode -->
+  <div class="card hidden" id="learnCard">
     <h2>Learn Mode</h2>
-    <div id="learnArea">
-      <p>Paste data and click <strong>Start Learn Mode</strong>.</p>
-    </div>
+    <div id="learnArea"></div>
   </div>
 </div>
 
@@ -89,7 +90,12 @@
   let current = null;
   let lastCard = null;
   let correctionMode = false;
-  let isTransitioning = false; // ✅ prevents enter spam skipping
+  let isTransitioning = false;
+
+  function showLearnMode() {
+    document.getElementById("pasteCard").classList.add("hidden");
+    document.getElementById("learnCard").classList.remove("hidden");
+  }
 
   function saveProgress() {
     localStorage.setItem('quizletLearn', JSON.stringify(cards));
@@ -100,11 +106,8 @@
     if (!saved) return false;
     try {
       cards = JSON.parse(saved);
-      lastCard = null;
-      correctionMode = false;
       return true;
     } catch(e) {
-      console.error("Failed to load saved session:", e);
       return false;
     }
   }
@@ -134,6 +137,7 @@
     isTransitioning = false;
 
     saveProgress();
+    showLearnMode();
     nextCard();
   }
 
@@ -158,17 +162,15 @@
     correctionMode = false;
     isTransitioning = false;
 
-    renderPrompt(false);
+    renderPrompt();
   }
 
-  function renderPrompt(showAnswers) {
+  function renderPrompt() {
     document.getElementById("learnArea").innerHTML = `
       <div class="prompt">${current.term}</div>
       <input type="text" id="answerInput" />
       <button onclick="checkAnswer()">Check</button>
-      <div class="feedback" id="feedback">
-        ${showAnswers ? `Correct answers: <strong>${current.answers.join(", ")}</strong>` : ""}
-      </div>
+      <div class="feedback" id="feedback"></div>
       <div class="streak">Progress: ${current.streak} / 2</div>
       <div class="progress">Remaining cards: ${queue.length}</div>
     `;
@@ -192,7 +194,6 @@
     const input = inputEl.value.trim().toLowerCase();
     const feedback = document.getElementById("feedback");
 
-    // ✅ Correction Mode
     if (correctionMode) {
       if (current.answers.includes(input)) {
         feedback.textContent = "✔ Locked in. You'll see this again.";
@@ -207,7 +208,6 @@
           nextCard();
         }, 700);
       } else {
-        // ✅ Keep showing answers
         feedback.innerHTML = `
           Incorrect.<br>
           Correct answers: <strong>${current.answers.join(", ")}</strong><br>
@@ -218,7 +218,6 @@
       return;
     }
 
-    // ✅ Normal Mode
     if (current.answers.includes(input)) {
       current.streak++;
       feedback.textContent = "Correct!";
@@ -257,6 +256,7 @@
     if (saved) {
       if (confirm("Resume previous session?")) {
         if (loadProgress()) {
+          showLearnMode();
           startLearn(true);
           return;
         }
